--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  # Serviço do Airflow Webserver (Interface Web)
+  # Airflow Webserver Service (Web Interface)
   airflow-webserver:
     build:
       context: .
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./airflow_home:/opt/airflow  # Persist Airflow home (DB, config, dags, logs, data)
     ports:
-      - "8080:8080"  # Porta do webserver
+      - "8080:8080"  # Webserver port
     environment:
       - AIRFLOW__CORE__EXECUTOR=SequentialExecutor
       - AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION=true
@@ -25,13 +25,6 @@ services:
       - AIRFLOW__SMTP__SMTP_PASSWORD=jBRt3RYA1VDkev44wf
       - AIRFLOW__SMTP__SMTP_STARTTLS=True
       - AIRFLOW__SMTP__SMTP_SSL=False
-      # Fallback/alert env variables used by scripts/alert.py
-      - ALERT_SMTP_HOST=smtp.ethereal.email
-      - ALERT_SMTP_PORT=587
-      - ALERT_SMTP_FROM=bernie.kunze24@ethereal.email
-      - ALERT_SMTP_USE_TLS=True
-      - ALERT_SMTP_USER=bernie.kunze24@ethereal.email
-      - ALERT_SMTP_PASSWORD=jBRt3RYA1VDkev44wf
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
       interval: 30s
@@ -39,7 +32,7 @@ services:
       retries: 5
     restart: always
 
-  # Serviço do Airflow Scheduler (Agendador de tarefas)
+  # Airflow Scheduler Service (Task scheduler)
   airflow-scheduler:
     build:
       context: .
@@ -63,13 +56,6 @@ services:
       - AIRFLOW__SMTP__SMTP_PASSWORD=jBRt3RYA1VDkev44wf
       - AIRFLOW__SMTP__SMTP_STARTTLS=True
       - AIRFLOW__SMTP__SMTP_SSL=False
-      # Fallback/alert env variables used by scripts/alert.py
-      - ALERT_SMTP_HOST=smtp.ethereal.email
-      - ALERT_SMTP_PORT=587
-      - ALERT_SMTP_FROM=bernie.kunze24@ethereal.email
-      - ALERT_SMTP_USE_TLS=True
-      - ALERT_SMTP_USER=bernie.kunze24@ethereal.email
-      - ALERT_SMTP_PASSWORD=jBRt3RYA1VDkev44wf
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type SchedulerJob --hostname "$${HOSTNAME}"']
       interval: 30s
@@ -78,11 +64,3 @@ services:
     restart: always
     depends_on:
       - airflow-webserver
-      - mailhog
-
-  mailhog:
-    image: mailhog/mailhog:latest
-    ports:
-      - "1025:1025"   # SMTP
-      - "8025:8025"   # Web UI
-    restart: unless-stopped
